--- a/index.html
+++ b/index.html
@@ -2,33 +2,6 @@
 # You don't need to edit this file, it's empty on purpose.
 # Edit theme's home layout instead if you wanna make some changes
 # See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-layout: single
+layout: home
 author_profile: true
 ---
-
-
-
-Level-Up Your Road Trips.
-
-### Why Tripperist?
-
-I like to take road trips, not a simple get from here to there type of road trip, but a real get out and see the sights and eat some darn good food type of road trip.
-
-I have extreme FOMO, sometimes it leads to a lot of detours that I should not have taken. I started Tripperist to manage my FOMO.
-
-#### Places
-
-If you've ever driven past a Historical Marker sign and thought, "Hmmm,should I stop and take a look?" the Places tab is for you.
-
-It lists historical markers within a 25-mile radius, sorted by distance. Tapping  the place will bring up information on the Historical Marker as well as a map showing it's location.
-
-##### Map
-
-The Map tab shows all Historical Markers within 25-miles on a map. Selecting a Place pin gets directions (using Maps) from your current location.
-
-#### Trips
-
-The Trips page is a work in progress but has the greatest potential. It has curated road trips that I have taken. Such as Route 66, Mississippi Delta, and the Third Coast from New Orleans to Boca Chica. You can follow in my tracks for a great road trip experience.
-
-Have feedback or interested in becoming a Triperista?
-Send us an email at tripperista@gmail.com
